--- a/liens-morts-detector-jlg/assets/css/blc-admin-styles.css
+++ b/liens-morts-detector-jlg/assets/css/blc-admin-styles.css
@@ -91,6 +91,8 @@
     padding: 24px;
     width: 100%;
     max-width: 480px;
+    max-height: 90vh;
+    overflow-y: auto;
 }
 
 .blc-modal__title {
